--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+body {
+    /* background-color: #42033d; */
+    background-image: linear-gradient(to top, #c8b8d8, #42033d);
+    /* background-size: cover; */
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+}
+
+h1 {
+    font-size: 80px;
+    text-align: center;
+    color: #d5b0ac;
 }
 
 *,
@@ -12,7 +26,8 @@ html {
 }
 
 .calc {
-    border: 1px solid gold;
+    border: 1px solid #e3b505;
+    background-image: linear-gradient(#98dfea, #104f55);
     border-radius: 5px;
     position: absolute;
     top: 50%;
@@ -27,8 +42,8 @@ html {
     font-size: 5rem;
     height: 80px;
     border: none;
-    background-color: rgb(22, 121, 22);
-    color: goldenrod;
+    background-color: #104f55;
+    color: #e3b505;
     text-align: right;
     padding-right: 20px;
     padding-left: 10px;
@@ -36,23 +51,23 @@ html {
 
 button {
     height: 60px;
-    background-color: aqua;
+    background-color: #07beb8;
     border-radius: 3px;
-    border: 1px solid orange;
+    border: 1px solid #e3b505;
     background-color: transparent;
     font-size: 2rem;
-    color: goldenrod;
+    color: #e3b505;
     background-image: linear-gradient(to bottom, transparent, transparent 50%, rgba(0, 0, 0, .04));
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05), inset 0 1px 0 0 rgba(255, 255, 255, .45), inset 0 -1px 0 0 rgba(255, 255, 255, .15), 0 1px 0 0 rgba(255, 255, 255, .15);
     text-shadow: 0 1px rgba(255, 255, 255, .4);
 }
 
 button:hover {
-    background-color: blueviolet;
+    background-color: #98dfea;
 }
 
 .operator {
-    color: #337cac;
+    color: #104f55;
 }
 
 .clear {
@@ -66,9 +81,9 @@ button:hover {
 }
 
 .equal-sign {
-    background-color: #2e86c0;
-    border-color: #337cac;
-    color: #fff;
+    background-color: #07beb8;
+    border-color: #104f55;
+    color: #e3b505;
     height: 100%;
     grid-area: 2 / 4 / 6 / 5;
 
